implement UI and fix speak time

--- a/docs/assets/AssetManifest.json
+++ b/docs/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/dog.jpg":["assets/dog.jpg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/finger_tap.mov":["assets/finger_tap.mov"],"assets/idle.mov":["assets/idle.mov"],"assets/listening.mov":["assets/listening.mov"],"assets/speaking.mov":["assets/speaking.mov"],"assets/thinking.mov":["assets/thinking.mov"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
