--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "dog_chat",
-    "short_name": "dog_chat",
+    "name": "dog_chat_ai",
+    "short_name": "dog_chat_ai",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
